--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="menu">
         <a class="wind">
-            <span><i class="fas fa-wind"></i></span>
+            <i class="fas fa-wind"></i>
             <div class="empty"></div>
         </a>
         <a class="solar"><i class="fas fa-solar-panel"></i>
